# claude-gemini-mcp-slim

./: .bandit  .gitignore  .gitleaks.toml  .mypy.ini  .pre-commit-config.yaml  .release-please-config.json  BANDIT_SARIF_SETUP.md  CHANGELOG.md  LICENSE.md  Makefile  README.md  SECURITY.md  SETUP.md  TESTING.md  commitlint.config.js  gemini_cli_mcp_server.py  gemini_helper.py  gemini_mcp_server.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.sh  test_hook.py  test_security.py
.claude/: README-SLASH-COMMANDS.md  hooks.json  slash-commands.json
.claude/commands/: a.md  analyze.md  c.md  codebase.md  d.md  debug.md  e.md  explain.md  g.md  gemini.md
.claude/scripts/: slash_commands.py  slim_gemini_hook.py
.github/workflows/: dependency.yml  release.yml  security.yml  test.yml  validate-commits.yml
.husky/: pre-commit
SETUP/: SETUP.md
backup/: gemini_cli_mcp_server_fixed.py
docs/: CHANGELOG.md  DEVELOPMENT.md  DOCUMENTATION_REFRESH_SUMMARY.md  README-SLASH-COMMANDS.md  RELEASING.md  SECURITY.md  TESTING.md
docs/SETUP/: SETUP.md
docs/archive/: BANDIT_SARIF_SETUP.md  BANDIT_SHELL_TRUE_SILENCE.md
scripts/: format_code.sh  run_tests.py
tests/: conftest.py  test_gemini_integration.py  test_markdown_conversion.py  test_mcp_server.py  test_security.py  working_mcp_server.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_cli_fallback.py  test_gemini_api_mocked.py  test_mcp_server_integration.py
tests/unit/: test_basic_operations.py  test_gemini_helper.py
